--- a/styles/components/_movie-card.scss
+++ b/styles/components/_movie-card.scss
@@ -2,6 +2,9 @@
 
 .movie {
   &-item {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     width: 300px;
     margin: auto;
     border-radius: 16px;
@@ -87,7 +90,8 @@
   &-buttons-container {
     display: flex;
     justify-content: space-between;
-    margin-top: 10px;
+    margin-top: auto;
+    padding: 10px 20px 20px;
 
     button {
       font-weight: $font-weight-bold;
